--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
       <artifactId>guava</artifactId>
       <version>30.1-jre</version>
     </dependency>
-    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.2.2</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>commons-collections</groupId>-->
+<!--      <artifactId>commons-collections</artifactId>-->
+<!--      <version>3.2.2</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
