--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 <!--      <version>3.2.2</version>-->
 <!--    </dependency>-->
     <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itext7-core</artifactId>
+      <version>7.1.14</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
